Fixed long titles overflowing tables on frontend
Fix #177

--- a/src/templates/assets/css/upstream.css
+++ b/src/templates/assets/css/upstream.css
@@ -183,3 +183,7 @@ table.dataTable tr.child td.child {
 .c-upstream-overview > div:last-child {
   padding-right: 0;
 }
+
+.dataTables_wrapper {
+  overflow: auto;
+}
